--- a/about.qmd
+++ b/about.qmd
@@ -4,6 +4,9 @@ image: profile.jpg
 about:
   template: solana
   links:
+    - icon: browser-safari
+      text: Coding Blog
+      href: https://sinus4096.github.io/
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/sina-schlegel-1a93a3295/
